syntax = "proto2";
package douyin.extra.first;
option go_package = "../extra_first;extra_first";
message douyin_favorite_action_request {
  required string token = 1; // 用户鉴权token
  required int64 video_id = 2; // 视频id
  required int32 action_type = 3; // 1-点赞，2-取消点赞
}

message douyin_favorite_action_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}