syntax = "proto2";
package douyin.extra.first;

option go_package = "../extra_first;extra_first";
import "feed.proto";
message douyin_favorite_list_request {
  required int64 user_id = 1; // 用户id
  required string token = 2; // 用户鉴权token
}

message douyin_favorite_list_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 用户点赞视频列表
}

